--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "project",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Abdulboriy Mahamatjanov",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
