fix: add nest cli for render

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "project",
   "version": "0.0.1",
   "description": "",
-  "author": "Abdulboriy Mahamatjanov",
+  "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/main.js",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
